--- a/styles.css
+++ b/styles.css
@@ -1,109 +1,84 @@
-@media (prefers-color-scheme: dark){
-    main{
-        color: #dadada;
-        background-color: #121212;
-      }
-    .nav-controls{
-    color: #dadada;
-    background-color: #121212
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+body{
+    background-color: pink;
+    color: black;
+    font-size: 23px;
+    font-family: 'Segoe UI', Tahoma, sans-serif;
+}
+/*Animation of h1 styling*/
+@keyframes title{
+    33%{
+        transform: translateY(15px);
+        color: black;
     }
+    66%{
+        transform: translateY(-7.5px);
+        color: #1b1b1b;
     }
-    @media (prefers-color-scheme: light){
-    main{
-      background-color: #dadada;
-      color: #121212
+    100%{
+        transform: translateY(-7.5px);
+        color: crimson;
     }
-    .nav-controls{
-      background-color: #6200ee;
-      color: #dadada;
-    }
-    }
-    main{
-      font-family: 'Segoe UI';
-      background-color: #dadada;
-      color: #121212;
-      font-size: 21px;
-      padding-left: 285px;
-    padding-right: 119px;
-    height: 100%
-    }
-    h1{
-    text-align: center !important;
-    font-family: Arial !important;
-    font-size: 45 !important;
-    padding: auto !important;
-    margin: auto !important;
-    }
-    main .main-section img{
+}
+
+.title{
+    text-align: center;
+    font-family: Verdana, monospace;
+    letter-spacing: 3.5px;
+    animation-name: title;
+    animation-timing-function: ease-in-out;
+    animation-duration: 5s;
+    animation-delay: 5.43s;
+    animation-iteration-count: infinite;
+}
+.title strong:first-of-type{
+    color: red;
+}
+.title strong:nth-of-type(2){
+    color: black;
+}
+.title strong:nth-of-type(3){
+    color: firebrick;
+}
+/*-------------------------------------------------------------------------------------------------------------------*/
+.pageOne{
+    position: absolute;
+    top: 120px;
+    left: 50px;
+    background-color: #aa9fff;
+    width: 620px;
+    height: 545px;
+    color: black;
+    overflow: hidden;
+    border-radius: 30px;
+}
+.haiku{
+    font-family: 'Dancing Script', Times, serif;
+    font-size: 25px;
+    margin-left: 15px;
+}
+.poem{
+    font-size: 25px;
+    text-align: center;
+}
+.collage{
+    position: absolute;
+    top: 120px;
+    left: 681px;
+    width: 800px;
+    height: 545px;
+    overflow: hidden;
+}
+.mother.a{
+    width: 510px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 545px;
     border-radius: 50px;
-    }
-    #csslogo{
-      width: 500px;
-      justify-content: space-between;
-      align-items: right;
-      float: right;
-    }
-    #htmllogo{
-      width: 500px;
-      justify-content: space-between;
-      align-items: left;
-      float: left;
-    }
-    div img{
-      display: inline-block;
-    }
-    .fa-solid{
-      width: 200px
-    }
-    .htmlxcss{
-      text-align: center !important;
-      padding-top: 231px !important;
-      color: black !important;
-      font-family: Verdana !important;
-      font-size: 35px !important;
-      font-style: normal !important;
-    }
-    header{
-      font-style: italic;
-      padding-top: 1px;
-    }
-    .htmlheader{
-      color: #e44d26;
-    }
-    .cssheader{
-      color: #379ad6;
-    }
-    .reference{
-      text-align: center;
-      padding-top: 25px;
-      
-    }
-    nav li{
-      list-style: none;
-    }
-    li a{
-      display: block;
-      width: 360px;
-    }
-    nav .nav-controls{
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      list-style: none;
-      text-decoration: none;
-    }
-    .nav-controls{
-      position: fixed;
-      width: 270px;
-      background-color: #6200ee ;
-      color: #dadada;
-      height: 100%;
-      font-family: Tahoma;
-      font-size: 15px
-    }
-    a{
-      color: inherit;
-    }
-    nav header{
-      color: #dadada;
-    }
+    cursor: none;
+}
